--- a/products.html
+++ b/products.html
@@ -93,35 +93,46 @@
                 data-toggle="list"
                 href="#pane-1"
                 role="tab"
-                ><i class="fas fa-angle-right mr-2"></i>所有甜點<span class="ml-1">(20)</span></a
+                ><i class="fas fa-angle-right mr-2"></i>所有甜點<span
+                  class="ml-1"
+                  >(20)</span
+                ></a
               >
               <a
                 class="list-group-item list-group-item-action"
                 data-toggle="list"
                 href="#pane-2"
                 role="tab"
-                ><i class="fas fa-angle-right mr-2"></i>方向盤<span class="ml-1">(6)</span></a
+                ><i class="fas fa-angle-right mr-2"></i>方向盤<span class="ml-1"
+                  >(6)</span
+                ></a
               >
               <a
                 class="list-group-item list-group-item-action"
                 data-toggle="list"
                 href="#pane-3"
                 role="tab"
-                ><i class="fas fa-angle-right mr-2"></i>雨刷<span class="ml-1">(8)</span></a
+                ><i class="fas fa-angle-right mr-2"></i>雨刷<span class="ml-1"
+                  >(8)</span
+                ></a
               >
               <a
                 class="list-group-item list-group-item-action"
                 data-toggle="list"
                 href="#pane-4"
                 role="tab"
-                ><i class="fas fa-angle-right mr-2"></i>輪胎<span class="ml-1">(2)</span></a
+                ><i class="fas fa-angle-right mr-2"></i>輪胎<span class="ml-1"
+                  >(2)</span
+                ></a
               >
               <a
                 class="list-group-item list-group-item-action"
                 data-toggle="list"
                 href="#pane-5"
                 role="tab"
-                ><i class="fas fa-angle-right mr-2"></i>保險桿<span class="ml-1">(4)</span></a
+                ><i class="fas fa-angle-right mr-2"></i>保險桿<span class="ml-1"
+                  >(4)</span
+                ></a
               >
             </div>
           </div>
@@ -409,7 +420,9 @@
                     <span aria-hidden="true">&laquo;</span>
                   </a>
                 </li>
-                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item active">
+                  <a class="page-link" href="#">1</a>
+                </li>
                 <li class="page-item"><a class="page-link" href="#">2</a></li>
                 <li class="page-item"><a class="page-link" href="#">3</a></li>
                 <li class="page-item">
@@ -424,6 +437,34 @@
       </div>
     </section>
 
+    <!-- 訂閱郵件 -->
+    <section class="bg-aid text-primary py-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-sm-6 h4 m-sm-0">油門催落郵件訂閱</div>
+          <div class="col-sm-6">
+            <div class="input-group">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="請輸入Email"
+                aria-label="Recipient's username"
+                aria-describedby="button-addon2"
+              />
+              <div class="input-group-append">
+                <button
+                  class="btn btn-primary"
+                  type="button"
+                  id="button-addon2"
+                >
+                  訂閱
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer id="footer" class="bg-primary text-white">
       <div class="container">
         <div class="row">
