--- a/success.html
+++ b/success.html
@@ -72,99 +72,35 @@
         </div>
       </div>
     </nav>
-    <section class="py-8">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-9">
-            <div class="bg-aid text-primary text-center py-4 h4">
-              您的購物車
-            </div>
-            <div class="row align-items-center py-3 text-primary border-bottom">
-              <div class="col-md-9">
-                <div class="row align-items-center">
-                  <div class="col-4">
-                    <img
-                      src="./images/car.jpg"
-                      class="h-100"
-                      width="100%"
-                      alt=""
-                    />
-                  </div>
-                  <div class="col-5 h5">
-                    白巧克力教練車<br /><span class="h6">NT $300</span>
-                  </div>
-                  <div class="col-3">
-                    <input
-                      type="number"
-                      class="form-control"
-                      id="count"
-                      value="2"
-                    />
-                  </div>
+    <section>
+      <div class="container mb-6">
+        <div
+          class="bg-cover success-img"
+          style="background-image: url(./images/car.jpg)"
+        >
+          <div class="h-100 success-row p-5">
+            <div class="pay-success d-flex justify-content-center flex-wrap">
+              <div class="process w-75 mb-5">
+                <div class="step">
+                  <i class="fas fa-check step-success text-aid"></i>
+                </div>
+                <div class="step">
+                  <i class="fas fa-check step-success text-aid"></i>
+                </div>
+                <div class="step">
+                  <i class="fas fa-check step-success text-aid"></i>
                 </div>
               </div>
-              <div class="col-md-3 pt-3 text-right price">
-                <strong>NT $600</strong
-                ><button type="button" class="btn ml-3">
-                  <i class="fas fa-trash-alt"></i>
-                </button>
-              </div>
+              <img src="./images/pay_success.svg" class="mb-5" alt="" />
+              <a href="./products.html" class="btn btn-assist text-primary w-100 py-3"
+                ><h5 class="m-0">繼續逛逛</h5></a
+              >
             </div>
-            <div class="row align-items-center py-3 text-primary border-bottom">
-              <div class="col-md-9">
-                <div class="row align-items-center">
-                  <div class="col-4">
-                    <img
-                      src="./images/car.jpg"
-                      class="h-100"
-                      width="100%"
-                      alt=""
-                    />
-                  </div>
-                  <div class="col-5 h5">
-                    黑巧克力輪胎<br /><span class="h6">NT $250</span>
-                  </div>
-                  <div class="col-3">
-                    <input
-                      type="number"
-                      class="form-control"
-                      id="count"
-                      value="3"
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3 pt-3 text-right price">
-                <strong>NT $750</strong>
-                <button type="button" class="btn ml-3">
-                  <i class="fas fa-trash-alt"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 mt-3 mt-lg-0">
-            <div class="bg-primary text-white text-center p-4">
-              <div class="h4 border-bottom pb-3">訂單摘要</div>
-              <div class="h6 py-2 d-flex justify-content-between">
-                <span>小計</span><span>NT $1,350</span>
-              </div>
-              <div class="h6 pb-2 d-flex justify-content-between">
-                <span>運費</span><span>NT $60</span>
-              </div>
-              <div class="h5 d-flex justify-content-between">
-                <span>總計</span><strong>NT $1,410</strong>
-              </div>
-            </div>
-            <a
-              class="btn btn-assist text-primary w-100 py-3"
-              href="./checkout1.html"
-              ><span class="h5">結帳</span></a
-            >
           </div>
         </div>
       </div>
     </section>
-    
+
     <!-- 訂閱郵件 -->
     <section class="bg-aid text-primary py-5">
       <div class="container">
@@ -193,6 +129,8 @@
         </div>
       </div>
     </section>
+
+    <!-- 聯絡我們 -->
     <footer id="footer" class="bg-primary text-white">
       <div class="container">
         <div class="row">
