--- a/login.html
+++ b/login.html
@@ -82,17 +82,17 @@
                   <strong>會員登入</strong>
                 </h2>
                 <p class="card-text">  
-                  <div class="input-group mb-4">
+                  <div class="input-group mb-4 input-row">
                     <div class="input-group-prepend">
                       <div class="input-group-text text-primary bg-aid"><i class="fas fa-user"></i></div>
                     </div>
-                    <input type="text" class="form-control text-primary bg-aid shadow-none border-0 " id="email" placeholder="請輸入帳號">
+                    <input type="text" class="form-control text-primary bg-aid shadow-none border-0 h-100" id="email" placeholder="請輸入帳號">
                   </div>
-                  <div class="input-group">
+                  <div class="input-group input-row">
                     <div class="input-group-prepend">
                       <div class="input-group-text text-primary bg-aid"><i class="fas fa-lock"></i></div>
                     </div>
-                    <input type="text" class="form-control text-primary bg-aid shadow-none border-0" id="password" placeholder="請輸入密碼">
+                    <input type="text" class="form-control text-primary bg-aid shadow-none border-0 h-100" id="password" placeholder="請輸入密碼">
                   </div>
                 </p>
               </div>
@@ -132,6 +132,34 @@
       </div>
     </section>
 
+    <!-- 訂閱郵件 -->
+    <section class="bg-aid text-primary py-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-sm-6 h4 m-sm-0">油門催落郵件訂閱</div>
+          <div class="col-sm-6">
+            <div class="input-group">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="請輸入Email"
+                aria-label="Recipient's username"
+                aria-describedby="button-addon2"
+              />
+              <div class="input-group-append">
+                <button
+                  class="btn btn-primary"
+                  type="button"
+                  id="button-addon2"
+                >
+                  訂閱
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer id="footer" class="bg-primary text-white">
       <div class="container">
         <div class="row">
