調整連結按鈕

--- a/checkout1.html
+++ b/checkout1.html
@@ -145,7 +145,7 @@
               />
             </div>
           </div>
-          <a type="submit" class="btn btn-assist text-primary w-100 py-3" href="./checkout2.html">
+          <a class="btn btn-assist text-primary w-100 py-3" href="./checkout2.html">
             <h5 class="m-0">下一步</h5>
           </a>
         </div>
