調整購物車畫面

--- a/checkout2.html
+++ b/checkout2.html
@@ -72,7 +72,7 @@
         </div>
       </div>
     </nav>
-    <div class="container py-8">
+    <div class="container py-5 py-md-8">
       <div class="row">
         <div class="col-lg-8 mb-4 mb-lg-0">
           <div class="bg-primary text-white p-5 h5 m-0">
