--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
         </div>
       </div>
     </nav>
-    <section class="py-8">
+    <section class=" py-5 py-md-8">
       <div class="container">
         <div class="row">
           <div class="col-md-6 pr-md-0 my-103">
@@ -215,9 +215,6 @@
         © Copyright 2021 全民駕訓班
       </div>
     </footer>
-    <!-- <script src="./node_modules/jquery/dist/jquery.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script> -->
-
     <script src="./javascripts/jQuery/jquery.js"></script>
     <script src="./javascripts/bootstrap/bootstrap.js"></script>
   </body>
