--- a/checkout1.html
+++ b/checkout1.html
@@ -72,7 +72,7 @@
         </div>
       </div>
     </nav>
-    <div class="container py-8">
+    <section class="container py-5 py-md-8">
       <div class="row">
         <div class="col-lg-8 mb-4 mb-lg-0">
           <div class="bg-primary text-white p-5 h5 m-0">
@@ -193,7 +193,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- 訂閱郵件 -->
     <section class="bg-aid text-primary py-5">
