--- a/checkout3.html
+++ b/checkout3.html
@@ -75,20 +75,14 @@
     <div class="container py-5 py-md-8">
       <div class="row">
         <div class="col-lg-8 mb-4 mb-lg-0">
-          <div class="bg-primary text-white p-5 h5 m-0">
+          <div class="bg-primary p-5 h5 m-0">
             <div class="form-row mb-5">
-              <div class="col-6"><h2 class="m-0">發票</h2></div>
-              <div class="col-6 d-flex align-items-center">
+              <div class="col-6"><h2 class="m-0 text-white ">運送</h2></div>
+              <div class="col-6 d-flex align-items-center text-aid">
                 <div class="process w-100">
-                  <div class="process w-100">
-                    <div class="step">
-                      <i class="fas fa-check step-success text-primary"></i>
-                    </div>
-                    <div class="step">
-                      <i class="fas fa-check step-success text-primary"></i>
-                    </div>
-                    <div class="step active"></div>
-                  </div>
+                  <i class="fas fa-check-circle "></i>
+                  <div class="step active"></div>
+                  <div class="step"></div>
                 </div>
               </div>
             </div>
@@ -97,7 +91,7 @@
               <a class="nav-item nav-link py-3 h4" href="#">郵寄發票</a>
             </nav>
 
-            <div class="form-group">
+            <div class="form-group text-white">
               <label for="email">電子郵件信箱</label>
               <input
                 id="email"
@@ -106,7 +100,7 @@
                 placeholder="請輸入Email"
               />
             </div>
-            <div class="form-group">
+            <div class="form-group text-white">
               <label for="idNumber">統一編號（選填）</label>
               <input
                 id="idNumber"
