--- a/checkout2.html
+++ b/checkout2.html
@@ -75,20 +75,18 @@
     <div class="container py-5 py-md-8">
       <div class="row">
         <div class="col-lg-8 mb-4 mb-lg-0">
-          <div class="bg-primary text-white p-5 h5 m-0">
+          <div class="bg-primary p-5 h5 m-0">
             <div class="form-row mb-5">
-              <div class="col-6"><h2 class="m-0">運送</h2></div>
-              <div class="col-6 d-flex align-items-center">
+              <div class="col-6"><h2 class="m-0 text-white ">運送</h2></div>
+              <div class="col-6 d-flex align-items-center text-aid">
                 <div class="process w-100">
-                  <div class="step">
-                    <i class="fas fa-check step-success text-primary"></i>
-                  </div>
+                  <i class="fas fa-check-circle "></i>
                   <div class="step active"></div>
                   <div class="step"></div>
                 </div>
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group  text-white">
               <label for="creditCard">信用卡卡號</label>
               <div class="input-group mb-2">
                 <input
@@ -105,7 +103,7 @@
                 </div>
               </div>
             </div>
-            <div class="form-row">
+            <div class="form-row text-white">
               <div class="form-group col-md-6">
                 <label for="lastName">持卡人姓名</label>
                 <input
@@ -126,7 +124,7 @@
                 />
               </div>
             </div>
-            <div class="form-row">
+            <div class="form-row text-white">
               <div class="form-group col-md-6">
                 <label for="month">有效期限</label>
                 <input
@@ -149,7 +147,7 @@
                 />
               </div>
             </div>
-            <div class="form-row">
+            <div class="form-row text-white">
               <div class="form-group col-md-6">
                 <label for="verification">驗證碼</label>
                 <input
