--- a/checkout3.html
+++ b/checkout3.html
@@ -78,11 +78,15 @@
           <div class="bg-primary p-5 h5 m-0">
             <div class="form-row mb-5">
               <div class="col-6"><h2 class="m-0 text-white ">運送</h2></div>
-              <div class="col-6 d-flex align-items-center text-aid">
+              <div class="col-6 d-flex align-items-center">
                 <div class="process w-100">
-                  <i class="fas fa-check-circle "></i>
+                  <div class="step">
+                    <i class="fas fa-check step-success text-primary"></i>
+                  </div>
+                  <div class="step">
+                    <i class="fas fa-check step-success text-primary"></i>
+                  </div>
                   <div class="step active"></div>
-                  <div class="step"></div>
                 </div>
               </div>
             </div>
